<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_fragment_home">
    <fragment
        android:id="@+id/nav_fragment_home"
        android:name="com.firstapplications.quickstore.HomeFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_fragment_home_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_fragment_client_acount"
        android:name="com.firstapplications.quickstore.ClientAcountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_client_acount" />
    <fragment
        android:id="@+id/detailsOfStoreItem"
        android:name="com.firstapplications.quickstore.DetailsOfStoreItem"
        android:label="@string/search_detail_description"
        tools:layout="@layout/fragment_details_of_store_item">
        <action
            android:id="@+id/action_detailsOfStoreItem_to_ordersFragment"
            app:destination="@id/ordersFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.firstapplications.quickstore.SearchFragment"
        android:label="SearchFragment" >
        <action
            android:id="@+id/action_searchFragment_to_detailsOfStoreItem"
            app:destination="@id/detailsOfStoreItem" />
    </fragment>
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.firstapplications.quickstore.OrdersFragment"
        android:label="Pedidos"
        tools:layout="@layout/fragment_orders"/>


</navigation>