<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:gravity="bottom"
            android:text="@string/string_store_phone"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_phone_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_address_details" />

        <TextView
            android:id="@+id/txt_web_page_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center|left"
            android:text="Lorem ipsum sit ammet"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="bottom"
            android:text="@string/string_store_name"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_products_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_nameOfStore_details" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="bottom"
            android:text="@string/string_store_mobilePhone"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_mobile_phone_number_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_phone_details" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="bottom"
            android:text="@string/string_store_address"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_address_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_products_details" />

        <TextView
            android:id="@+id/txt_nameOfStore_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="bottom"
            android:text="Nombre de tienda"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="400dp"
            android:minHeight="360dp"
            android:scaleType="center"
            android:src="@drawable/qrstr_ic_application"
            app:layout_constraintBottom_toTopOf="@+id/txt_nameOfStore_details"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="2" />

        <TextView
            android:id="@+id/txt_address_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="bottom"
            android:text="Lorem ipsum sit ammet"
            app:layout_constraintBottom_toTopOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="bottom"
            android:text="@string/string_store_webPage"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_web_page_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_mobile_phone_number_details" />

        <TextView
            android:id="@+id/txt_mobile_phone_number_details"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="bottom"
            android:text="12565688"
            app:layout_constraintBottom_toTopOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/txt_products_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="bottom"
            android:text="Lorem, ipsum, sit, ammet"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_go_to_web_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_web_page_details" />

        <TextView
            android:id="@+id/txt_phone_details"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="bottom"
            android:text="12565688"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <Button
            android:id="@+id/goToMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/string_store_viewOnMap"
            app:layout_constraintStart_toEndOf="@+id/txt_phone_details"
            app:layout_constraintTop_toBottomOf="@+id/txt_address_details" />

        <Button
            android:id="@+id/goToOrders_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/btn_order_products"
            app:layout_constraintBaseline_toBaselineOf="@+id/button5"
            app:layout_constraintStart_toEndOf="@+id/button5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>